--- a/api/package.json
+++ b/api/package.json
@@ -1,8 +1,22 @@
 {
-  "dependencies": {
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "mongoose": "^6.0.8",
-    "multer": "^1.4.3"
-  }
+	"dependencies": {
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"mongoose": "^6.0.8",
+		"multer": "^1.4.3",
+		"nodemon": "^2.0.13"
+	},
+	"name": "mern-blog",
+	"version": "1.0.0",
+	"description": "Blog App made with MERN Stack",
+	"main": "index.js",
+	"scripts": {
+		"start": "nodemon index.js"
+	},
+	"keywords": [
+		"mern",
+		"blog"
+	],
+	"author": "Coderaulia",
+	"license": "ISC"
 }
