--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
 		"express": "^4.17.1",
 		"mongoose": "^6.0.8",
 		"multer": "^1.4.3",
-		"nodemon": "^2.0.13"
+		"nodemon": "^2.0.13",
+		"path": "^0.12.7"
 	},
 	"name": "mern-blog",
 	"version": "1.0.0",
